--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,8 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ffffff url('../img/geometry2.png');
+    /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
 
@@ -67,7 +68,7 @@ h1 {
 }
 
 .deck .card.open {
-    transform: rotateY( 180deg );
+    transform: rotateY( 180deg);
     background: #02b3e4;
     cursor: default;
 }
@@ -75,24 +76,27 @@ h1 {
 .deck .card.show {
     font-size: 33px;
 }
+
 @-webkit-keyframes shake {
     from {
-       -webkit-transform: rotate(10deg);
+        -webkit-transform: rotate(10deg);
     }
     to {
-      -webkit-transform-origin:center center;
-      -webkit-transform: rotate(-10deg);
+        -webkit-transform-origin: center center;
+        -webkit-transform: rotate(-10deg);
     }
 }
+
 .deck .card.match {
     cursor: default;
-    animation:shake 0.1s ease-in-out 0.1s 3 alternate;
+    animation: shake 0.1s ease-in-out 0.1s 3 alternate;
     -webkit-animation: shake 0.1s ease-in-out 0.1s 3 alternate;
     background: #02ccba;
     font-size: 33px;
 }
+
 .deck .card.mismatch {
-    animation:shake 0.1s ease-in-out 0.1s 3 alternate;
+    animation: shake 0.1s ease-in-out 0.1s 3 alternate;
     -webkit-animation: shake 0.1s ease-in-out 0.1s 3 alternate;
     background-color: #ff0000;
 }
@@ -128,12 +132,17 @@ h1 {
     display: none;
 }
 
+/*
+ * Styles for the success message
+ */
+
 .success-message {
     position: absolute;
     top: calc(50% - 140px);
     width: 100%;
     text-align: center;
 }
+
 .button {
     border: none;
     border-radius: 4px;
@@ -157,6 +166,7 @@ h1 {
     background-color: #40b6a4;
     text-decoration: none;
 }
+
 .circle-loader {
     margin: 0 0 10px 10px;
     border: 2px solid rgba(0, 0, 0, 0.2);
@@ -168,32 +178,34 @@ h1 {
     position: relative;
     display: inline-block;
     vertical-align: top;
-  }
-  
-  .circle-loader,
-  .circle-loader:after {
+}
+
+.circle-loader,
+.circle-loader:after {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-  }
-  
-  .load-complete {
+}
+
+.load-complete {
     -webkit-animation: none;
     animation: none;
     border-color: #5cb85c;
     transition: border 500ms ease-out;
-  }
-  
-  .checkmark {
+}
+
+.checkmark {
     display: none;
-  }
-  .checkmark.draw:after {
+}
+
+.checkmark.draw:after {
     animation-duration: 800ms;
     animation-timing-function: ease;
     animation-name: checkmark;
     transform: scaleX(-1) rotate(135deg);
-  }
-  .checkmark:after {
+}
+
+.checkmark:after {
     opacity: 1;
     height: 1.5em;
     width: .8em;
@@ -205,40 +217,48 @@ h1 {
     top: 1.45em;
     position: absolute;
 }
-  .show {
-      display: block;
-  }
-  
-  @keyframes loader-spin {
+
+.show {
+    display: block;
+}
+
+@keyframes loader-spin {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  @keyframes checkmark {
+}
+
+@keyframes checkmark {
     0% {
-      height: 0;
-      width: 0;
-      opacity: 1;
+        height: 0;
+        width: 0;
+        opacity: 1;
     }
     20% {
-      height: 0;
-      width: .8em;
-      opacity: 1;
+        height: 0;
+        width: .8em;
+        opacity: 1;
     }
     40% {
-      height: .7em;
-      width: .8em;
-      opacity: 1;
+        height: .7em;
+        width: .8em;
+        opacity: 1;
     }
     100% {
-      height: 1.5em;
-      width: .8em;
-      opacity: 1;
+        height: 1.5em;
+        width: .8em;
+        opacity: 1;
     }
-  }
+}
+
+
+/*
+ * Styles for the timer
+ */
+
 .timer {
     display: inline-block;
     margin-left: 10px;
